// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> renders the component and isValid set to true 1`] = `
.c1 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  padding: 0 16px;
  height: 50px;
  font-size: 15px;
  font-weight: 400;
  color: #2C3236;
  border: 1px solid #3EBC64;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c1:focus {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c1::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1:disabled {
  background-color: #F7F7F7;
  color: #818F9B;
}

.c0 {
  max-width: 100%;
  width: 100%;
}

<div
  class="c0"
>
  <input
    aria-label="test1"
    class="c1"
    id="text-id-test1"
    name="test1"
    type="text"
  />
</div>
`;

exports[`<TextField /> renders the component with error 1`] = `
.c1 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  padding: 0 16px;
  height: 50px;
  font-size: 15px;
  font-weight: 400;
  color: #2C3236;
  border: 1px solid #FF4539;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c1:focus {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c1::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1:disabled {
  background-color: #F7F7F7;
  color: #818F9B;
}

.c0 {
  max-width: 100%;
  width: 100%;
}

<div
  class="c0"
>
  <input
    aria-label="test1"
    class="c1"
    id="text-id-test1"
    name="test1"
    type="text"
  />
</div>
`;

exports[`<TextField /> renders the component with error and label and size 1`] = `
.c0 {
  display: block;
  margin: 0 0 10px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2C3236;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-size: 15px;
  margin-bottom: 0;
}

<label
  class="sc-AxhCb c0"
  for="text-id-test1"
>
  yes!
</label>
`;

exports[`<TextField /> renders the component with label 1`] = `
.c0 {
  display: block;
  margin: 0 0 10px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2C3236;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-size: 15px;
}

<label
  class="sc-AxhCb c0"
  for="text-id-test1"
>
  Username
</label>
`;

exports[`<TextField /> renders the component with no a11y violations 1`] = `
.c1 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  padding: 0 16px;
  height: 50px;
  font-size: 15px;
  font-weight: 400;
  color: #2C3236;
  border: 1px solid #818F9B;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c1:focus {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c1::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1:disabled {
  background-color: #F7F7F7;
  color: #818F9B;
}

.c0 {
  max-width: 100%;
  width: 100%;
}

<div
  class="c0"
>
  <input
    aria-label="test1"
    class="c1"
    id="text-id-test1"
    name="test1"
    type="text"
  />
</div>
`;

exports[`<TextField /> renders the component with prefix 1`] = `
.c2 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  padding: 0 16px;
  height: 50px;
  font-size: 15px;
  font-weight: 400;
  color: #2C3236;
  border: 1px solid #818F9B;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c2:focus {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c2::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c2::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c2:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c2::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c2:disabled {
  background-color: #F7F7F7;
  color: #818F9B;
}

.c0 {
  max-width: 148px;
  width: 100%;
}

.c1 {
  position: relative;
  display: block;
}

.c1::before {
  content: '£';
  position: absolute;
  left: 10px;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 15px;
  color: #2C3236;
}

.c1 input {
  padding-left: 24px;
}

<div
  class="c0"
>
  <span
    class="c1"
    prefix="£"
  >
    <input
      aria-label="test1"
      class="c2"
      id="text-id-test1"
      name="test1"
      type="text"
    />
  </span>
</div>
`;

exports[`<TextField /> renders the component with size 1`] = `
.c1 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  padding: 0 16px;
  height: 50px;
  font-size: 15px;
  font-weight: 400;
  color: #2C3236;
  border: 1px solid #818F9B;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c1:focus {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c1::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1:disabled {
  background-color: #F7F7F7;
  color: #818F9B;
}

.c0 {
  max-width: 148px;
  width: 100%;
}

<div
  class="c0"
>
  <input
    aria-label="test1"
    class="c1"
    id="text-id-test1"
    name="test1"
    type="text"
  />
</div>
`;
